@@ -335,10 +335,10 @@ extern "C" {
 
 #ifndef _CRT_ALLOCATION_DEFINED
 #define _CRT_ALLOCATION_DEFINED
-  _CRTIMP void *__cdecl calloc(size_t _NumOfElements,size_t _SizeOfElements);
-  _CRTIMP void __cdecl free(void *_Memory);
-  _CRTIMP void *__cdecl malloc(size_t _Size);
-  _CRTIMP void *__cdecl realloc(void *_Memory,size_t _NewSize);
+  void *__cdecl calloc(size_t _NumOfElements,size_t _SizeOfElements);
+  void __cdecl free(void *_Memory);
+  void *__cdecl malloc(size_t _Size);
+  void *__cdecl realloc(void *_Memory,size_t _NewSize);
   _CRTIMP void *__cdecl _recalloc(void *_Memory,size_t _Count,size_t _Size);
   //_CRTIMP void __cdecl _aligned_free(void *_Memory);
   //_CRTIMP void *__cdecl _aligned_malloc(size_t _Size,size_t _Alignment);
