@@ -1,3 +1,10 @@
+2007-10-15  Kai Tietz  <kai.tietz@onevision.com>
+
+	* direct.h: (getcwd): No _CRTIMP declaration.
+	* io.h: (getcwd): No _CRTIMP declaration.
+	* malloc.h: (malloc, calloc, free, realloc): No _CRTIMP declaration.
+	* stdlib.h: (malloc, calloc, free, realloc): No _CRTIMP declaration.
+
 2007-10-10  Kai Tietz  <kai.tietz@onevision.com>
 
 	* math.h: Add prototypes for nextafterl and ldexpl.
